--- a/taxi_rides_ny/dbt_project.yml
+++ b/taxi_rides_ny/dbt_project.yml
@@ -1,17 +1,23 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'taxi_rides_ny'
+name: 'natality_analysis'
 version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
 profile: 'default'
 
-# These configurations specify where dbt should look for different types of files.
-# The `model-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
+# Configure global variables
+vars:
+  project_id: 'natality-data-project-dez'  # Your GCP project ID
+  dataset: 'natality_data'                # Your BigQuery dataset name
+  # Define valid values for categorical fields
+  mother_age_groups: [1, 2, 3, 4, 5, 6, 7, 8, 9]
+  mother_race_codes: [1, 2, 3, 4, 5, 6]
+  education_codes: [1, 2, 3, 4, 5, 6, 7, 8, 9]
+
+# File paths (keep these standard)
 model-paths: ["models"]
 analysis-paths: ["analyses"]
 test-paths: ["tests"]
@@ -19,34 +25,21 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-target-path: "target"  # directory which will store compiled SQL files
-clean-targets:         # directories to be removed by `dbt clean`
+target-path: "target"  # directory for compiled SQL files
+clean-targets:         # directories to remove with `dbt clean`
   - "target"
   - "dbt_packages"
 
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In dbt, the default materialization for a model is a view. This means, when you run 
-# dbt run or dbt build, all of your models will be built as a view in your data platform. 
-# The configuration below will override this setting for models in the example folder to 
-# instead be materialized as tables. Any models you add to the root of the models folder will 
-# continue to be built as views. These settings can be overridden in the individual model files
-# using the `{{ config(...) }}` macro.
-
+# Model configurations
 models:
-  taxi_rides_ny:
-      # Applies to all files under models/.../
-      staging:
-          materialized: view
-      core:
-          materialized: table
-vars:
-  payment_type_values: [1, 2, 3, 4, 5, 6]
-
-seeds: 
-    taxi_rides_ny:
-        taxi_zone_lookup:
-            +column_types:
-                locationid: numeric
+  natality_analysis:
+    # Configurations for all models
+    +materialized: view  # Default to views (override in specific models if needed)
+    
+    # Staging layer - light transformations
+    staging:
+      +materialized: view
+    
+    # Core models - business logic
+    core:
+      +materialized: table  # Materialize as tables for performance
