--- a/taxi_rides_ny/dbt_project.yml
+++ b/taxi_rides_ny/dbt_project.yml
@@ -19,6 +19,7 @@ vars:
 
 # File paths (keep these standard)
 model-paths: ["models"]
+analysis-paths: ["analyses"]
 test-paths: ["tests"]
 seed-paths: ["seeds"]
 macro-paths: ["macros"]
